--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<div class="overlay"></div>
+	<div class="messageBox">
+		<h1>Game Over!</h1>
+		<!-- <img id="heart-one" class="heart" src="images/char-boy.png"> -->
+		<!-- <button>GO TO MAIN MENUE</button> -->
+	</div>
+	<div class="container">
+		<img id="heart-one" class="heart" src="images/Heart.png">
+		<img id="heart-two" class="heart" src="images/Heart.png">
+		<img id="heart-three" class="heart" src="images/Heart.png">
+		<img id="heart-four" class="heart" src="images/Heart.png">
+		<img id="heart-five" class="heart" src="images/Heart.png">
+		<!-- <p class="score">fdfdfd</p> -->
+		<canvas id="gameCanvas" width="505" height="606"></canvas>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="js/resources.js"></script>
 	<script src="js/engine.js"></script>
 	<script src="js/app.js"></script>
